@@ -1,3 +1,6 @@
+Apr 29, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
+- honor setting to ignore bots when copying server info to clipboard
+
 Apr 15, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - add q3a Excessive Plus gametypes (patch by Jason Santos)
 
